= Change Log
All notable changes to this project will be documented in this file.

== [Unreleased]

== Added

* `all` assertion as an alternative to chaining many `and`s together.

== [0.2.0] - 2019-09-23

=== Added

* Benchmarking module to
** log the times of tests
** Allow failing a test if it takes too long
* Test suites as a data object
* Ability to contain a test suite within another suite
* Ability to prefix `MatcherAssertion` descriptions with custom messaging.
* Ability to fail a `TestResults` object at run level not just test level.
* Module to wrap JavaTest in more scala-usable syntax
* Simple SBT Integration
* Lazy and eager test runners
* Composite `and` `Matcher`
* Reflection `TestRunners` instance that will recursively search a directory for classes to run

=== Changed

* Allow override of `JavaFire` `testRunners` property at commandline level
* Documentation is now generated by asciidoctor and snippits are generated from tests
* Extracted `onTestCompletion` and `onRunCompletion` to their own separate functional interfaces
* Altered eventual consistency defaults to be quicker and more reasonable
* `TestSuite` interface to `TestSuiteClass`
* Handle suite results and single test results separately
* `TestResults` aggregation - split logs for the run into their own list.
* Rename `TestResults.init` to `TestResults.empty`
* Default runner to be eager runner
* Where possible ``Stream``s to ``List``s since ``Stream``s are mutable

=== Removed

* Custom suite names on `TestSuiteClass`, this is no longer necessary since you can directly create a suite.

=== Fixed

* Fixture runner no longer increments the test count on failure

== [0.1.0] - 2019-06-09

First version of library