@@ -1,5 +1,5 @@
 // TODO how do we ensure this test uses the correct version? The scripted plugin just does not work.
 val javaTestVersion = "0.3.0-SNAPSHOT"
 // tag::include[]
-addSbtPlugin("io.github.olib963" % "javatest-sbt" % javaTestVersion)
+addSbtPlugin("io.github.olib963" % "sbt-javatest" % javaTestVersion)
 // end::include[]
