@@ -1,0 +1,3 @@
+package io.github.olib963.javatest_scala
+
+package object scalacheck extends PropertyAssertions
